Redmine/redmine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
      - name: redmine
        image: redmine:4.1.1
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 3000
          name: redmine
