Redmine/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lesson5-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /redmine
        pathType: Prefix
        backend:
          service: 
            name: redmine
            port:
              number: 3080
